fixed the header and some alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -37,19 +37,19 @@ header {
 }
 
 .male {
-    left: 60px;
+    left: 150px;
     top: 10%;
     transform: translate(-20%);
     
 }
 
 .female {
-    left: 120px;
+    left: 300px;
     top: 10%;
     transform: translate(-20%);
 }
 .child {
-    left: 180px;
+    left: 450px;
     top: 10%;
     transform: translate(-20%);
 }
@@ -74,19 +74,31 @@ header {
 }  
 
 .shoppingcart {
-position: absolute;
-width: 50px;
-height: 37px;
-right: 20%;
-top: 102px;
+    position: absolute;
+    width: 50px;
+    height: 37px;
+    right: 100px;
+    top: 10%;
 }
 
 .user {
     position: absolute;
     width: 50px;
     height: 37px;
-    left: 78.4%;
+    right: 300px;
+    top: 10%;
 }
+
+.shoppingcart,
+.user {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100px;
+    margin: 0 5px;
+}
+
+
 
 .sitat2 {
     position: absolute;
@@ -111,6 +123,7 @@ top: 102px;
     width: 100%;
     height: 400px;
     background-color: #fff;
+    margin-top: 20px;
 }
 
 .image-container1 img {
@@ -130,6 +143,7 @@ top: 102px;
     font-weight: 400px;
     font-size: 16px;
     line-height: 19px;
+
     color: #000;
 }
 .container {
@@ -139,6 +153,38 @@ top: 102px;
     justify-content: center;
     height: 100vh;
     
+}
+
+.image-container2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 400px;
+    background-color: #fff;
+    margin-top: 20px;
+}
+
+.image-container2 img {
+    max-width: 100%;
+    max-height: 100%;
+    top: 829px;
+}
+
+.sitat3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    font-family: 'inter';
+    font-style: normal;
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #000;
 }
 
 
